17 May 2020 - Updated Articles

--- a/css/style.css
+++ b/css/style.css
@@ -1460,3 +1460,8 @@ h1, h2, h3, h4, h5, h6 {
   color: #fff; }
 
 /*# sourceMappingURL=style.css.map */
+
+/* *articles posts* */
+.interview-subheadings{
+  color:black;
+}
